[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
rand = "0.8.5"
noise = "0.8.2"
bevy_flycam = "0.10.1"
bevy_framepace = "0.12.1"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3